# Rust

./: .gitignore
01-bucles/: Cargo.toml
02-convertidor_temperatura/: Cargo.toml
03-definiendo_struct/: Cargo.toml
04-ejepmlo_usando_struct_area_rectangulo/: Cargo.toml
05-funciones/: Cargo.toml
05-referencias_prestamos/: Cargo.toml
07-orion/: Cargo.toml
07-orion/.github/workflows/: rust-ci.yml
07-orion/src/: freya.rs  gui.rs  http_client.rs  main.rs
09-ramas/: Cargo.toml
10-rust/: main.rs
11-slices_parametros/: Cargo.toml
12-succesion_fibonacci/: Cargo.toml
14-dependencias/: Cargo.toml
15-enumeracion/: Cargo.toml
17-ejercicio_automovil/: Cargo.toml
18-condiciones/: Cargo.toml
19-opencv/: Cargo.toml
20-mapa_hash/: Cargo.toml
21-expresiones_bucles/: Cargo.toml
22-control_errores/: Cargo.toml
23-option_tratar_ausencia/: Cargo.toml
24-ejercicio_result_control_errores/: Cargo.toml
25-manejo_de_memoria/: Cargo.toml
26-ejercicio_duraciones/: Cargo.toml
27-tipos_datos_genericos/: Cargo.toml
29-rest_client/: Cargo.toml
30-comportamientos_compartido_rasgos/: Cargo.toml
31-uso_derivacion/: Cargo.toml
32-rasgos_funciones_genericas/: Cargo.toml
33-iteradores/: Cargo.toml
34-ejercicio_tipos_genericos/: Cargo.toml
35-ejercicio_implementacion_interador/: Cargo.toml
36-authenticacion/: Cargo.toml
37-ejercicio_visibilidad/: Cargo.toml
38-ejercicio_modulos/: Cargo.toml
39-pruebas_unitarias/: Cargo.toml
40-ejercicio_pruebas_unitarias/: Cargo.toml
41-pruebas_documentacion/: Cargo.toml
45-ejemplo/: Cargo.toml
(+127 files in other folders)
