[package]
name = "orion_http"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
druid = "0.8.3"
anyhow = "1.0"
freya = "0.2"
dioxus = { version = "0.5", features = ["macro", "hooks"], default-features = false }
